# cl-hash-fpga

./: .gitignore  LICENSE  README.md
src/: CMakeLists.txt  cl-hash.cc  sha.cl
